--- a/css/main.css
+++ b/css/main.css
@@ -22,6 +22,7 @@
    --hero-overlay: rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4);
    --portfolio-btn-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
    --social-icons-team: #afb1b8;
+   --bcg-footer-icons: rgba(255, 255, 255, 0.1);
 }
 
 /* 
@@ -345,7 +346,7 @@ img {
    text-align: center;
 }
 
-/* Ссылки на соц. сети */
+/* Ссылки на соц. сети в команде */
 
 .social-icons-footer,
 .social-icons {
@@ -467,6 +468,25 @@ img {
    color: var(--accent-color);
 }
 
+/* Ссылки на соц. сети в футере */
+
+.social-icons-footer .social-icons-svg { fill: var(--body-hero-color); }
+
+.social-icons-footer .social-icons-link { background-color: var(--bcg-footer-icons); }
+
+/*.social-icons-footer .social-icons-link:nth-child(2) { background-color: var(--accent-color); } */
+
+.section-title-footer {
+   margin-bottom: 10px;
+
+   font-style: normal;
+   font-size: 14px;
+   font-weight: 700;
+   line-height: 1.17;
+   color: var(--body-hero-color);
+   text-transform: uppercase;
+}
+
 /* 
 * Основной контент страницы "Портфолио" (фильтр из кнопок и примеры проектов)
 */
@@ -547,9 +567,3 @@ img {
    font-size: 16px;
    line-height: 2;
 }
-
-.social-icons-footer {
-   display: inline-flex;
-}
-
-.social-icons-svg-footer { fill: var(--body-hero-color); }
