--- a/css/main.css
+++ b/css/main.css
@@ -204,7 +204,7 @@ img {
 .hero { 
    padding-top: 200px;
    padding-bottom: 200px;
-   max-width: 1600рх;
+   max-width: 1600px;
    height: 600px;
    margin-left: auto;
    margin-right: auto;
@@ -420,12 +420,13 @@ img {
 */
 
 .footer-links .container { 
-   padding: 0;
-   margin: 0;
-}
-
-.footer-links { 
+   width: 1200px;
    display: flex;
+   align-items: baseline;
+   flex-wrap: nowrap;
+   padding-left: 15px;
+   padding-right: 15px;
+   margin: 0 auto;
 
    font-family: var(--main-font); 
 }
@@ -438,14 +439,12 @@ img {
 .footer-links .address { 
    padding-top: 60px;
    padding-bottom: 60px;
-   padding-left: 15px;
    margin-right: 30px; 
 }
 
 .footer-links .social-media-footer { 
    padding-top: 72px;
    padding-bottom: 100px;
-   padding-right: 15px; 
 }
 
 .full-logo-footer { 
