--- a/css/main.css
+++ b/css/main.css
@@ -62,7 +62,10 @@ body {
 	margin: 0;
 }
 
-.link { text-decoration: none; }
+.flex-element-link,
+.link { 
+   text-decoration: none; 
+}
 
 .section { padding: 94px 0; }
 
@@ -399,7 +402,7 @@ img {
 }
 
 .client-card-link {
-   display: inline-flex;
+   display: flex;
    padding: 16px 32px;
 }
 
@@ -420,13 +423,12 @@ img {
 */
 
 .footer-links .container { 
+   padding: 60px 15px;
+   margin: 0 auto;
    width: 1200px;
    display: flex;
    align-items: baseline;
    flex-wrap: nowrap;
-   padding-left: 15px;
-   padding-right: 15px;
-   margin: 0 auto;
 
    font-family: var(--main-font); 
 }
@@ -437,14 +439,7 @@ img {
 }
 
 .footer-links .address { 
-   padding-top: 60px;
-   padding-bottom: 60px;
    margin-right: 30px; 
-}
-
-.footer-links .social-media-footer { 
-   padding-top: 72px;
-   padding-bottom: 100px;
 }
 
 .full-logo-footer { 
@@ -534,6 +529,7 @@ img {
    border: 1px solid transparent;
 }
 
+.portfolio-button.current,
 .portfolio-button:hover,
 .portfolio-button:focus {
    color: var(--body-hero-color);
@@ -554,7 +550,10 @@ img {
    margin-right: 30px;
 }
 
-.flex-element:hover { box-shadow: var(--project-hover);}
+.flex-element-link:hover,
+.flex-element-link:focus { 
+   box-shadow: var(--project-hover);
+}
 
 .flex-element:nth-child(3n) { margin-right: 0; }
 
@@ -581,6 +580,7 @@ img {
 .section-text-project {
    margin-bottom: 0;
 
+   color: var(--main-text-color);
    font-size: 16px;
    line-height: 2;
 }
