--- a/css/main.css
+++ b/css/main.css
@@ -399,12 +399,12 @@ img {
 
 .client-card-link {
    display: flex;
-   padding: 16px 32px;
+   padding: 25px 32px;
 }
 
 .client-icons-svg { 
    width: 106px;
-   height: 60px;
+   height: 45px;
 
    fill: var(--social-icons-team);
 }
@@ -551,8 +551,10 @@ img {
    margin-right: 30px;
 }
 
-.flex-element:hover,
-.flex-element:focus { 
+.flex-element-link { display: block; }
+
+.flex-element-link:hover,
+.flex-element-link:focus { 
    box-shadow: var(--project-hover);
 }
 
